# pattern-recognition-and-computervision

./: README.md
Calibration and Augmented Reality/: Aruco.cpp  ArucoModule.py  CMakeLists.txt  camera_params.xml  extensions.cpp  extensions.h  main.cpp  metadata.yml  operations.cpp  operations.h  readme.txt  vir_reality.cpp
Content-based Image Retrieval/: CMakeLists.txt  Matching.cpp  Readme.txt  csv_util.cpp  csv_util.h  distanceMetrics.cpp  distanceMetrics.h  featureVectors.cpp  featureVectors.h  main.cpp  metadata.yml  utils.cpp  utils.h
Real Time Filtering/: README.md  filter.cpp  filter.h  imgDisplay.cpp  makefile  metadata.yml  vidDisplay.cpp  vidDisplay.h
Real-time 2-D Object Recognition/: CMakeLists.txt  classify.cpp  csv_util.cpp  csv_util.h  distance_metrics.cpp  distance_metrics.h  dnn.cpp  filters.cpp  filters.h  imgDisplay.cpp  main.cpp  metadata.yml  readme.txt  training.cpp
Recognition using Deep Networks/: dataloader.py  examine.py  helper_functions.py  main.py  metadata.yml  models.py  output.txt  predictions.py  readme.txt  requirements.txt  train.py  train_prep.py
